# ahk-wrapper-powershell

./: .gitignore  README.md  STATUS_V1.1.md  action_plan.md  ahklauncher.ps1  ahklauncher_LLM_USAGE_GUIDE.md  ahklauncher_backup.ps1  best_practices_current_project.md
ahk-mcp-server/: .gitignore  pyproject.toml  run_server.py
ahk-mcp-server/src/ahk_mcp/: __init__.py  schemas.py  server.py
ahk-mcp-server/src/ahk_mcp/resources/: __init__.py  github.py
ahk-mcp-server/src/ahk_mcp/services/: __init__.py  github_cli.py  powershell.py
ahk-mcp-server/src/ahk_mcp/tools/: __init__.py  capture_ui.py  github_issue.py  run_script.py
docs/rapports/: 2026.01.21_15.20_SESSION_phase6-success-detection.md
tests/: fake_autohotkey.cmd  test_access_violation_v1.ahk  test_error.ahk  test_exit_immediate.ahk  test_fatal_error.ahk  test_include_error.ahk  test_instant_exit_v2.ahk  test_minimal_v2.ahk  test_msgbox_capture.ahk  test_msgbox_success_v2.ahk  test_pure_success_v2.ahk  test_runtime_division_v1.ahk  test_runtime_error.ahk  test_simple_error.ahk  test_simple_error_v2.ahk  test_simple_success_v2.ahk  test_simple_v2.ahk  test_success.ahk  test_success_immediate_v2.ahk  test_success_v2.ahk  test_tray_persistent_v2.ahk  test_ultra_simple_v2.ahk
