[project]
name = "ahk-mcp-server"
version = "0.1.0"
description = "MCP server for AutoHotkey script testing - enables LLMs to run and validate AHK V1/V2 scripts"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Julien", email = "theflysurfer@example.com" }
]
keywords = ["mcp", "autohotkey", "ahk", "testing", "llm"]

dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ahk_mcp"]
